modded gitignore once again
d

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,13 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+*.csproj.user
+bin/
+obj/
+.vs/
+.vscode/
+.idea/
+license/
+
+GenerateRandomPassword.psd1.source
+RSModuleBuilder.ps1
